# darkie

./: display.launch.py  err  package.xml  setup.py  velocity_test.py
Maze_Robot_URDF_description/: CMakeLists.txt  package.xml
Maze_Robot_URDF_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
Maze_Robot_URDF_description/urdf/: Maze_Robot_URDF.gazebo  Maze_Robot_URDF.trans  Maze_Robot_URDF.xacro
Maze_Robot_URDF_description_ROS2/: package.xml  setup.py
Maze_Robot_URDF_description_ROS2/launch/: display.launch.py  gazebo.launch.py
Maze_Robot_URDF_description_ROS2/urdf/: Maze_Robot_URDF.gazebo  Maze_Robot_URDF.ros2control  Maze_Robot_URDF.xacro  materials.xacro
